--- a/B2B Deneme.csproj
+++ b/B2B Deneme.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\SubPage\**" />
+    <Content Remove="Views\SubPage\**" />
+    <EmbeddedResource Remove="Views\SubPage\**" />
+    <None Remove="Views\SubPage\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
@@ -17,14 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Home\LoginPage.cshtml">
+    <Content Update="Views\Login\LoginPage.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\SubPage\" />
   </ItemGroup>
 
 </Project>
