--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataConnection": "Server=Fdb-TECH;Database=B2BAPP;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  }
 }
