--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataConnection": "Server=Fdb-TECH;Database=B2BAPP;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DataConnection": "Server=Fdb-TECH;Database=B2BAPP;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "MikroConnection": "Server=Fdb-TECH;Database=MikroDB_V16_Fdbtech;Trusted_Connection=True;MultipleActiveResultSets=true;"
 
   }
 }
