--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataConnection": "Server=DESKTOP-INRBA6K\\SQLEXPRESS;Database=B2BAPP;Trusted_Connection=True;MultipleActiveResultSets=true;",
-    "MikroConnection": "Server=DESKTOP-INRBA6K\\SQLEXPRESS;Database=MikroDB_V16_JUMP;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DataConnection": "Server=Fdb-TECH;Database=B2BAPP;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "MikroConnection": "Server=Fdb-TECH;Database=MikroDB_V16_JUMP;Trusted_Connection=True;MultipleActiveResultSets=true;"
 
     //"MikroConnection": "Server=Fdb-TECH;Database=MikroDB_V16_Fdbtech;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    //"MikroConnection": "Server=DESKTOP-INRBA6K\\SQLEXPRESS;Database=MikroDB_V16_JUMP;Trusted_Connection=True;MultipleActiveResultSets=true;"
+
 
   }
 }
